# docs/swagger.json
@@ -2392,7 +2392,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Allows a user to pause/unpause a target with specified ID",
+                "description": "Allows a user to regenerate the key of agent of target with specified ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -2402,20 +2402,14 @@
                 "tags": [
                     "target"
                 ],
-                "summary": "Pause target",
+                "summary": "Regenerate target's agent's key",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "ID of target to pause/unpause",
+                        "description": "ID of target to regenerate agent's key",
                         "name": "targetID",
                         "in": "path",
                         "required": true
-                    },
-                    {
-                        "type": "boolean",
-                        "description": "Pause status, can be true for paused, false for unpaused. If not supplied, target's pause status will change to the opposite of current status.",
-                        "name": "pause",
-                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -2444,7 +2438,7 @@
                         }
                     },
                     "404": {
-                        "description": "Returned when a target with given ID couldn't be found.",
+                        "description": "Returned when a target with given ID couldn't be found or it's type isn't 2 (agent).",
                         "schema": {
                             "$ref": "#/definitions/helpers.GenericErrorResponse"
                         }
@@ -2713,6 +2707,10 @@
                         }
                     ]
                 },
+                "thresholdFieldParams": {
+                    "description": "Threshold field params must be supplied if type is 1 (threshold). Used to specify when to trigger alarms in some cases, can be left blank though",
+                    "type": "string"
+                },
                 "type": {
                     "description": "Type must be 0 (unavailable) or 1 (threshold)",
                     "allOf": [
@@ -2748,6 +2746,10 @@
                             "$ref": "#/definitions/model.AlarmThresholdField"
                         }
                     ]
+                },
+                "thresholdFieldParams": {
+                    "description": "Threshold field params must be supplied if type is getting changed to 1 (threshold). Used to specify when to trigger alarms in some cases, can be left blank though",
+                    "type": "string"
                 },
                 "type": {
                     "description": "Type must be 0 (unavailable) or 1 (threshold), if supplied",
@@ -2948,6 +2950,38 @@
                 }
             }
         },
+        "model.Agent": {
+            "type": "object",
+            "properties": {
+                "HideIp": {
+                    "type": "boolean"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "deletedAt": {
+                    "$ref": "#/definitions/gorm.DeletedAt"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "installed": {
+                    "type": "boolean"
+                },
+                "key": {
+                    "type": "string"
+                },
+                "lastDataReceived": {
+                    "type": "string"
+                },
+                "targetId": {
+                    "type": "integer"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
         "model.Alarm": {
             "type": "object",
             "properties": {
@@ -2984,6 +3018,10 @@
                 "thresholdField": {
                     "$ref": "#/definitions/model.AlarmThresholdField"
                 },
+                "thresholdFieldParams": {
+                    "description": "For example what NIC should the threshold apply to",
+                    "type": "string"
+                },
                 "type": {
                     "$ref": "#/definitions/model.AlarmType"
                 },
@@ -2996,10 +3034,26 @@
             "type": "integer",
             "enum": [
                 0,
-                1
+                1,
+                2,
+                3,
+                4,
+                5,
+                6,
+                7,
+                8,
+                9
             ],
             "x-enum-varnames": [
                 "Latency",
+                "CPUFrequency",
+                "CPUUsage",
+                "IOWait",
+                "MemoryUsagePercent",
+                "SwapUsagePercent",
+                "DiskUsagePercent",
+                "NICInbound",
+                "NICOutbound",
                 "thresholdFieldMax"
             ]
         },
@@ -3076,7 +3130,16 @@
                     "type": "integer"
                 },
                 "latency": {
+                    "description": "Latency is a \"generic\" field, payload can provide further information in non-push targets (http, ping etc.)",
                     "type": "integer"
+                },
+                "payload": {
+                    "description": "Payload is stored as gzipped json in a bytea column, but sent in JSON normally",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/model.HeartbeatPayload"
+                        }
+                    ]
                 },
                 "status": {
                     "$ref": "#/definitions/model.TargetStatus"
@@ -3092,6 +3155,27 @@
                 },
                 "updatedAt": {
                     "type": "string"
+                }
+            }
+        },
+        "model.HeartbeatPayload": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "object",
+                    "additionalProperties": {}
+                },
+                "type": {
+                    "description": "All TargetTypes are allowed to submit further details",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/model.TargetType"
+                        }
+                    ]
+                },
+                "version": {
+                    "description": "Each Type of payload can have their own versioning",
+                    "type": "integer"
                 }
             }
         },
@@ -3268,6 +3352,9 @@
         "model.Target": {
             "type": "object",
             "properties": {
+                "agent": {
+                    "$ref": "#/definitions/model.Agent"
+                },
                 "alarms": {
                     "type": "array",
                     "items": {
@@ -3418,7 +3505,8 @@
             "enum": [
                 0,
                 1,
-                2
+                2,
+                3
             ],
             "x-enum-comments": {
                 "targetTypeMax": "\"sentinel\" value"
@@ -3426,11 +3514,13 @@
             "x-enum-descriptions": [
                 "",
                 "",
+                "",
                 "\"sentinel\" value"
             ],
             "x-enum-varnames": [
                 "PING",
                 "HTTP",
+                "AGENT",
                 "targetTypeMax"
             ]
         },
@@ -3697,9 +3787,8 @@
             ],
             "properties": {
                 "checkerIDs": {
-                    "description": "At least one checker must be supplied, all checkers must exist",
+                    "description": "At least one checker must be supplied if type is 0 or 1, all checkers must exist, if given type is 2 this is ignored",
                     "type": "array",
-                    "minItems": 1,
                     "items": {
                         "type": "integer"
                     }
@@ -3713,7 +3802,7 @@
                     ]
                 },
                 "maxRetries": {
-                    "description": "Max retries is required",
+                    "description": "Max retries is required, ignored in case of agents",
                     "type": "integer"
                 },
                 "name": {
@@ -3733,7 +3822,7 @@
                     "type": "integer"
                 },
                 "type": {
-                    "description": "Type must be 0 (PING) or 1 (HTTP)",
+                    "description": "Type must be 0 (PING), 1 (HTTP) or 2 (AGENT)",
                     "allOf": [
                         {
                             "$ref": "#/definitions/model.TargetType"
@@ -3811,7 +3900,7 @@
             "type": "object",
             "properties": {
                 "checkerIDs": {
-                    "description": "Must contain at least one checker ID, all checkers must exist. This is a \"replace update\"",
+                    "description": "Must contain at least one checker ID, all checkers must exist. This is a \"replace update\". This is ignored if Target's type is 2 (AGENT)",
                     "type": "array",
                     "items": {
                         "type": "integer"
@@ -3821,6 +3910,7 @@
                     "$ref": "#/definitions/target.HTTPInfoUpdateRequest"
                 },
                 "maxRetries": {
+                    "description": "Value of maxRetries can be updated even if target's type is 2 (agent), but it's ignored in the checking behavior",
                     "type": "integer"
                 },
                 "name": {
@@ -3886,6 +3976,16 @@
                 1000000000,
                 60000000000,
                 3600000000000,
+                -9223372036854775808,
+                9223372036854775807,
+                1,
+                1000,
+                1000000,
+                1000000000,
+                60000000000,
+                3600000000000,
+                -9223372036854775808,
+                9223372036854775807,
                 1,
                 1000,
                 1000000,
@@ -3902,6 +4002,16 @@
                 "Second",
                 "Minute",
                 "Hour",
+                "minDuration",
+                "maxDuration",
+                "Nanosecond",
+                "Microsecond",
+                "Millisecond",
+                "Second",
+                "Minute",
+                "Hour",
+                "minDuration",
+                "maxDuration",
                 "Nanosecond",
                 "Microsecond",
                 "Millisecond",
